name:                mess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mess#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mess
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , VKHS
                     , text >= 1.2.2
                     , unix-time >= 0.3.7
                     , aeson >= 1.1
                     , bytestring >= 0.10
