name:                mess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mess#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mess-fetch
  hs-source-dirs:      src
  main-is:             Fetch.hs
  default-language:    Haskell2010
  other-modules:       Data.VkMess
  build-depends:       base >= 4.7 && < 5
                     , VKHS
                     , text >= 1.2.2
                     , unix-time >= 0.3.7
                     , aeson >= 1.1
                     , bytestring >= 0.10
                     , binary >= 0.8
                     , optparse-applicative >= 0.13
                     , containers >= 0.5.7

executable mess-html
  hs-source-dirs:      src
  main-is:             Html.hs
  default-language:    Haskell2010
  other-modules:       Data.VkMess Text.Html.VkMess Text.Html.VkMess.Static
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2
                     , unix-time >= 0.3.7
                     , aeson >= 1.1
                     , bytestring >= 0.10
                     , binary >= 0.8
                     , optparse-applicative >= 0.13
                     , blaze-html >= 0.9
                     , blaze-markup >= 0.8
                     , file-embed >= 0.0
                     , containers >= 0.5.7
